fixed whitespace issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ html {
 }
 
 body {
-    font-family: Inter, Arial, Arial, Helvetica, sans-serif;
+    font-family: Inter, Arial, Helvetica, sans-serif;
     color: var(--color-body);
     font-size: 2.4rem;
     line-height: 1.5;
@@ -615,7 +615,7 @@ a {
 
 .block {
     --padding-vertical: 6rem;
-    padding: var(--padding-vertical) 2rem;
+    padding: var(--padding-vertical) 0;
     /* border: 2px solid red; */
     
 }
